--- a/style.css
+++ b/style.css
@@ -13,3 +13,49 @@ body {
   padding: 1rem;
   margin: 2rem;
 }
+
+input {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
+  max-width: 240px;
+  height: 50px;
+  border-radius: 1rem;
+  border: 4px solid black;
+  outline: none;
+  padding: 0.2rem;
+  transition-duration: 0.4s;
+}
+
+input:hover {
+  border-color: #fdbb2d;
+}
+
+input:focus {
+  border-color: #22c1c3;
+}
+
+button {
+  padding: 12px 24px;
+  background: transparent;
+  border-radius: 2rem;
+  transition-duration: 0.5s;
+}
+
+button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th,
+td {
+  border: 3px solid black;
+  padding: 20px;
+  border-collapse: collapse;
+}
