--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ input:focus {
 }
 
 button {
+  margin-top: 0.5rem;
+  margin-left: 0.4rem;
   padding: 12px 24px;
   background: transparent;
   border-radius: 2rem;
@@ -49,13 +51,21 @@ button:hover {
 }
 
 table {
-  margin-left: auto;
-  margin-right: auto;
+  width: 50%;
+  text-align: justify;
+  border-collapse: collapse;
+  margin: auto;
+}
+
+table caption {
+  font-size: larger;
 }
 
 th,
 td {
-  border: 3px solid black;
-  padding: 20px;
+  text-align: center;
+  border: 2px solid #22c1c3;
+  width: 0%;
   border-collapse: collapse;
+  padding: 0.4rem;
 }
